@@ -449,7 +449,7 @@
                         <configuration>
                             <groups>com.splicemachine.test.SerialTest</groups>
                             <excludedGroups>${excluded.categories}</excludedGroups>
-                            <argLine>-Xmx3g -XX:MaxPermSize=256m</argLine>
+                            <argLine>-Xmx3g</argLine>
                             <redirectTestOutputToFile>true</redirectTestOutputToFile>
                             <dependenciesToScan>
                                 <dependency>com.splicemachine:splice_machine</dependency>
@@ -473,7 +473,7 @@
                         <configuration>
                             <excludedGroups>com.splicemachine.test.SerialTest, ${excluded.categories}</excludedGroups>
                             <parallel>classes</parallel>
-                            <threadCount>1</threadCount>
+                            <threadCount>10</threadCount>
                             <!-- -sf- single-threaded for now -->
                             <perCoreThreadCount>false</perCoreThreadCount>
                             <argLine>-Xmx4g</argLine>
@@ -687,7 +687,6 @@
                                 <argument>-Dzookeeper.sasl.client=false</argument>
                                 <argument>-Xmx1g</argument>
                                 <argument>-Xms1g</argument>
-                                <argument>-XX:MaxPermSize=256M</argument>
                                 <argument>-XX:+CMSClassUnloadingEnabled</argument>
                                 <argument>com.splicemachine.kafka.TestKafkaCluster</argument>
                                 <argument>localhost:2181</argument>
@@ -758,7 +757,6 @@
                                 <argument>-Dzookeeper.sasl.client=false</argument>
                                 <argument>-Xmx1g</argument>
                                 <argument>-Xms1g</argument>
-                                <argument>-XX:MaxPermSize=256M</argument>
                                 <argument>-XX:+CMSClassUnloadingEnabled</argument>
                                 <argument>-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=4002</argument>
                                 <argument>org.apache.zookeeper.server.ZooKeeperServerMain</argument>
@@ -893,7 +891,7 @@
                                <argument>-Dsplice.spark.serializer=org.apache.spark.serializer.KryoSerializer
                                 </argument>
                                 <argument>-Dsplice.spark.shuffle.compress=false</argument>
-                                <argument>-Dsplice.spark.executor.extraJavaOptions=-XX:MaxPermSize=128m
+                                <argument>-Dsplice.spark.executor.extraJavaOptions=
                                     -Dhbase.rootdir=${project.build.directory}/hbase
                                     -Dlog4j.configuration=${log4j.config.uri}
                                     -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=4020
@@ -913,7 +911,6 @@
                                 <argument>-XX:CMSInitiatingOccupancyFraction=70</argument>
                                 <argument>-XX:+UseCMSInitiatingOccupancyOnly</argument>
                                 <argument>-XX:MaxGCPauseMillis=100</argument>
-                                <argument>-XX:MaxPermSize=512M</argument>
                                 <argument>-XX:+CMSClassUnloadingEnabled</argument>
                                 <argument>-XX:MaxDirectMemorySize=1g</argument>
                                 <argument>-enableassertions</argument>
@@ -978,7 +975,6 @@
                                 <argument>-XX:+UseCMSInitiatingOccupancyOnly</argument>
                                 <argument>-XX:MaxGCPauseMillis=100</argument>
                                 <argument>-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=4001</argument>
-                                <argument>-XX:MaxPermSize=512M</argument>
                                 <argument>-XX:+CMSClassUnloadingEnabled</argument>
                                 <argument>-XX:MaxDirectMemorySize=1g</argument>
                                 <argument>com.splicemachine.test.SpliceTestClusterParticipant</argument>
